# template-project

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  clean.sh  clone.sh  create-comp.sh  create-hdr.sh  create-src.sh  create-test.sh  createtest.sh  make.sh  tests-install.sh  tests.cmake
cmake/: HunterGate.cmake  deps.cmake  proj-config.cmake.in  proj-helpers.cmake  projConfig.cmake.in  vcpkg-toolchain.cmake
export/proj/: exports.h
export/template-project/: version.hpp
include/proj/: exports.h  exports.h.in  version.h
src/proj/: exports.c  stub.c  version.c
src/projexec/: main.c
tests/: defs.h  exports.c  exports.cpp  tmain.cpp  tmain.cxx
tests/install/: CMakeLists.txt  test.sh
tests/proj/: version.cxx
